<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WalkSetupScreen" >

    <RelativeLayout
        android:background="@color/dark_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:imeOptions="actionNext"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="startWalk"
            android:text="@string/submit" />

        <EditText
            android:id="@+id/long_description_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/submit"
            android:maxLength="1000"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/short_description_input"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ,./\() "
            android:layout_marginBottom="14dp"
            android:ems="10"
            android:hint="@string/long_description"
            android:inputType="textMultiLine"
            android:imeOptions="actionDone" />

        <EditText
            android:id="@+id/short_description_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ,./\() "
            android:layout_alignParentRight="true"
            android:layout_below="@+id/title_input"
            android:maxLength="99"
            android:ems="10"
            android:hint="@string/short_description"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:scrollHorizontally="false" />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:maxLength="100"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_below="@+id/textView1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/title" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

</RelativeLayout>
